--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,8 +28,8 @@ jobs:
         npm run build
     - uses: actions/upload-artifact@main
       with:
-    needs: build
-          path: public/
+        name: webpack artifacts
+        path: public/
       
     
   test:
