--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,8 @@ jobs:
       run: |
         npm install
         npm run build
-    - uses: actions/upload-artifact@main
+        
+    - uses: actions/upload-artifact@master
       with:
         name: webpack artifacts
         path: public/
@@ -40,6 +41,10 @@ jobs:
         node-version: [12.x, 14.x]
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/download-artifact@main
+      with: 
+        name: webpack artifacts
+        path: public
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
